<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_Profiles"
        android:title="@string/Label_Profiles"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/menu_Overview"
        android:title="@string/Label_Overview"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/menu_Income"
        android:title="@string/Label_Income"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/menu_Expense"
        android:title="@string/Label_Expense"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/menu_ChangeCurrency"
        android:title="@string/Label_ChangeCurrency"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/menu_DuplicateProfile"
        android:title="@string/Label_DuplicateProfile"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/menu_DeleteProfile"
        android:title="@string/Label_DeleteProfile"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/menu_Info"
        android:title="@string/Label_Info"
        app:showAsAction="never">

    </item>
</menu>