<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TextView to show Title -->
    <TextView
        android:id="@+id/textView_AdapterViewListProfile_title"
        style="@style/general_Top_MatchParent"
        android:text="@string/hint_title"
        android:textStyle="bold" />

    <LinearLayout
        style="@style/general_Middle_MatchParent"
        android:orientation="horizontal">

        <!-- TextView to show income/year -->
        <TextView
            style="@style/list_weight1"
            android:text="@string/list_GrossMonth" />

        <!-- TextView to show income/year -->
        <TextView
            android:id="@+id/textView_AdapterViewListProfile_IncomeMonthGross"
            style="@style/list_weight1"
            android:text="income/month" />

    </LinearLayout>

    <LinearLayout
        style="@style/general_Middle_MatchParent"
        android:orientation="horizontal">

        <!-- TextView to show income/year -->
        <TextView
            style="@style/list_weight1"
            android:text="@string/list_NetMonth" />

        <!-- TextView to show income/year -->
        <TextView
            android:id="@+id/textView_AdapterViewListProfile_IncomeMonthNet"
            style="@style/list_weight1"
            android:text="income/month" />

    </LinearLayout>

    <LinearLayout
        style="@style/general_Middle_MatchParent"
        android:orientation="horizontal">

        <!-- TextView to show income/year -->
        <TextView
            style="@style/list_weight1"
            android:text="@string/list_ExpenseMonth" />

        <!-- TextView to show expense/year -->
        <TextView
            android:id="@+id/textView_AdapterViewListProfile_ExpenseYear"
            style="@style/list_weight1"
            android:text="expense/month" />
    </LinearLayout>

    <LinearLayout
        style="@style/general_Middle_MatchParent"
        android:orientation="horizontal">

        <!-- TextView to show income/year -->
        <TextView
            style="@style/list_weight1"
            android:text="@string/list_BalanceMonth" />

        <!-- TextView to show balance/year -->
        <TextView
            android:id="@+id/textView_AdapterViewListProfile_BalanceYear"
            style="@style/list_weight1"
            android:text="balance/month" />
    </LinearLayout>
</LinearLayout>