<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activitys.EditExpenseActivity">

    <include
        android:id="@+id/toolbar_MainActivity"
        layout="@layout/toolbar_main_activity">
    </include>

    <!-- expense name -->
    <EditText
        android:id="@+id/editText_EditExpenseActivity_Title"
        style="@style/general_Top_MatchParent"
        android:lines="1"
        android:hint="@string/hint_title" />

    <!-- expense value -->
    <LinearLayout style="@style/general_Middle_MatchParent">

        <!-- expense value -->
        <EditText
            android:id="@+id/editText_EditExpenseActivity_Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/hint_value" />

        <TextView
            android:id="@+id/textView_EditExpenseActivity_Currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="chf" />
    </LinearLayout>

    <!-- repeated every -->
    <LinearLayout style="@style/general_Middle_MatchParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statement_Every" />

        <EditText
            android:id="@+id/editText_EditExpenseActivity_RepeatedBy"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1" />

        <Spinner
            android:id="@+id/spinner_EditExpenseActivity_Every"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/every_arrays">

        </Spinner>

        <!-- button save -->
        <Button
            style="@style/button_WrapContent"
            android:onClick="onClickSaveExpense"
            android:text="@string/button_Save" />
    </LinearLayout>

    <!-- show values -->
    <TableLayout
        style="@style/general_Middle_MatchParent"
        android:layout_weight="1"
        android:stretchColumns="0,1,2">

        <!-- expense/day -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/statement_ExpenseDay" />

            <TextView
                android:id="@+id/textView_EditExpenseActivity_ExpenseDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="1" />

            <TextView android:layout_column="2" />

        </TableRow>

        <!-- expense/week -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/statement_ExpenseWeek" />

            <TextView
                android:id="@+id/textView_EditExpenseActivity_ExpenseWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="7" />

            <TextView android:layout_column="2" />
        </TableRow>

        <!-- expense/month -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/statement_ExpenseMonth" />

            <TextView
                android:id="@+id/textView_EditExpenseActivity_ExpenseMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="31" />

            <TextView android:layout_column="2" />
        </TableRow>

        <!-- expense/year -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/statement_ExpenseYear" />

            <TextView
                android:id="@+id/textView_EditExpenseActivity_ExpenseYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="356" />

            <TextView android:layout_column="2" />
        </TableRow>
    </TableLayout>

    <!-- bottom layout -->
    <RelativeLayout style="@style/general_Bottom_MatchParent">

        <!-- button delete -->
        <Button
            android:id="@+id/button_EditExpenseActivity_DeleteExpense"
            style="@style/button_WrapContent"
            android:layout_centerInParent="true"
            android:onClick="onClickDeleteExpense"
            android:text="@string/button_delete" />


    </RelativeLayout>
</LinearLayout>