<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TextView to show Title -->
    <TextView
        android:id="@+id/textView_AdapterViewListIncome_Title"
        style="@style/general_Top_MatchParent"
        android:text="@string/hint_title"
        android:textStyle="bold" />

    <LinearLayout
        style="@style/general_Middle_MatchParent"
        android:orientation="horizontal">

        <!-- TextView to show income/year -->
        <TextView
            style="@style/list_weight1"
            android:text="@string/list_Gross" />

        <!-- TextView to show income/year -->
        <TextView
            android:id="@+id/textView_AdapterViewListIncome_GrossValue"
            style="@style/list_weight1"
            android:text="value" />
    </LinearLayout>
    <LinearLayout
        style="@style/general_Middle_MatchParent"
        android:orientation="horizontal">

        <!-- TextView to show income/year -->
        <TextView
            style="@style/list_weight1"
            android:text="@string/list_Net" />

        <!-- TextView to show income/year -->
        <TextView
            android:id="@+id/textView_AdapterViewListIncome_NetValue"
            style="@style/list_weight1"
            android:text="value" />
    </LinearLayout>
</LinearLayout>