<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TextView to show Title -->
    <TextView
        android:id="@+id/textView_AdapterViewListExpense_Title"
        style="@style/general_Top_MatchParent"
        android:text="@string/hint_title"
        android:textStyle="bold" />

    <LinearLayout
        style="@style/general_Middle_MatchParent"
        android:orientation="horizontal">

        <!-- TextView to show income/year -->
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/list_ExpenseYear" />

        <!-- TextView to show income/year -->
        <TextView
            android:id="@+id/textView_AdapterViewListExpense_YearValue"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="value" />
    </LinearLayout>

    <LinearLayout
        style="@style/general_Middle_MatchParent"
        android:orientation="horizontal">

        <!-- TextView to show income/year -->
        <TextView
            style="@style/list_weight1"
            android:text="@string/list_ExpenseMonth" />

        <!-- TextView to show income/year -->
        <TextView
            android:id="@+id/textView_AdapterViewListExpense_MonthValue"
            style="@style/list_weight1"
            android:text="value" />
    </LinearLayout>
</LinearLayout>